# platform

./: .gitignore  .gitmodules  .markdownlint.json  LICENSE  README.md
.github/workflows/: build-docker-container.yaml  deploy-to-staging.yaml  manually-build-containers.yaml  manually-bump-submodules.yaml  markdownlint.yaml  marketplace-release.yaml  platform-release.yaml  release.yaml  update-docs.yaml  update-submodules.yaml
changelog/: README.md  add.py  release.py
changelog/changes/: 0vuPDPd56gApaX7w0CqHYWHp89.md  5e0c6LHXPYxp7oao75JQDwRUSY.md  6NFbT8JWmBJj3EG4b9grafmBQB.md  9f9ggx8gbu5X4dWCaY78uVdbPB.md  9pJJAsZkxACOpImHtEaF7b9bzs.md  FRRXgavywEJHrtviHdxGz4SV4W.md  Gzqww5Hu9R7kap8YoqbYqjhRIg.md  IgnKODb1lbLsPzMZ7WgAltb8Oz.md  KG1dLve9JNKoOSm9YMK6OTGj1a.md  L4qTgez45jTtJUuqGuKxC35pVR.md  S8vJXwtkj7uo2FuMjUntemaal2.md  X4UKMBvclY6o6ZV3IUZl5QrURl.md  X5QhILeaE7arpxP2UPcWz9DphE.md  XLPoRoLYEgXSY2dbLorEc1tUFW.md  YrbpZlgqukYadvkiz7t6KubUme.md  cbb66Vp9CekORLMLCMcMyjXXoq.md  fSA3Z8vuok98xVGkHcBIuV9aF4.md  sV2PllGlnxKb4dmEQ5VvYxFzRK.md  tsAD0Hbo6sBi4asiavICZhfEye.md  xC24rQw4CL3YaGGLmsYrdc51i4.md
changelog/releases/: v0.16.0.yaml  v0.17.0.yaml  v0.17.1.yaml  v0.17.2.yaml  v0.18.0.yaml  v0.18.1.yaml  v0.18.2.yaml  v0.19.0.yaml  v0.19.1.yaml  v0.20.0.yaml  v0.20.1.yaml  v0.20.2.yaml  v1.0.0.yaml  v1.0.1.yaml  v1.0.2.yaml  v1.0.3.yaml  v1.0.4.yaml  v1.0.5.yaml  v1.0.6.yaml  v1.0.7.yaml  v1.0.8.yaml  v1.1.0.yaml  v1.1.1.yaml  v1.1.2.yaml  v1.10.0.yaml  v1.10.1.yaml  v1.10.2.yaml  v1.10.3.yaml  v1.10.4.yaml  v1.11.0.yaml  v1.12.0.yaml  v1.13.0.yaml  v1.14.0.yaml  v1.14.1.yaml  v1.15.0.yaml  v1.16.0.yaml  v1.16.1.yaml  v1.17.0.yaml  v1.17.1.yaml  v1.17.2.yaml  (+35 more)
cli/: .dockerignore  Dockerfile  LICENSE  README.md  pyproject.toml
cli/tenzir_platform/: subcommand_admin.py  subcommand_alert.py  subcommand_auth.py  subcommand_node.py  subcommand_org.py  subcommand_secret.py  subcommand_tools.py  subcommand_workspace.py  tenzir_platform.py
cli/tenzir_platform/helpers/: __init__.py  auth_rule.py  cache.py  client.py  environment.py  exceptions.py  oidc.py
components/dex/: Dockerfile  dex.tenzir-entrypoint.sh
components/seaweed/: Dockerfile  seaweed.tenzir-entrypoint.sh
docs/: platform-cli.mdx
docs/platform/: cli.mdx
examples/keycloak/: README.md  docker-compose.yaml  env.example
examples/localdev/: docker-compose.yaml  env.example  workspaces.yaml
examples/native-tls/: README.md  create-certificates.py  docker-compose.yaml  env.example
scripts/: create-release  describe-component-bump
(+100 files in other folders)
